--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
 
 addons:
   apt:
+    update: true
     sources:
     - ubuntu-toolchain-r-test
     packages:
@@ -18,6 +19,7 @@ addons:
 
 before_install:
   - sudo apt-get install jmtpfs -y
+  - sudo rm /usr/bin/g++
   - sudo ln -s /usr/bin/g++-7 /usr/bin/g++
   - echo "WHICH g++ $(which g++)"
 
