--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,9 @@ addons:
     - g++-7
 
 before_install:
-  - sudo apt-get install jmtpfs -y
+  - sudo apt-get install jmtpfs libmtp-dev -y
   - sudo rm /usr/bin/g++
   - sudo ln -s /usr/bin/g++-7 /usr/bin/g++
-  - echo "WHICH g++ $(which g++)"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
