--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ before_install:
   - sudo apt-get install jmtpfs libmtp-dev -y
   - sudo rm /usr/bin/g++
   - sudo ln -s /usr/bin/g++-7 /usr/bin/g++
+  - ls -al /usr/lib/jvm/default-java/include
+  - ls -al /usr/lib/jvm/default-java/include/linux
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
