--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'cpp'
+apply plugin: 'c'
 
 group = 'org.meltzg'
 version = '0.0.1-SNAPSHOT'
@@ -66,58 +66,22 @@ model {
 			}
 		}
 	}
-	binaries {
-		all {
-			if (toolChain in Gcc) {
-				if (buildType ==buildTypes.debug) {
-					cppCompiler.args '-g', '-std=c++17'
-				} else {
-					cppCompiler.args '-std=c++17'
-				}
-			}
-			if (toolChain in VisualCpp && buildType == buildTypes.debug) {
-				cppCompiler.args '/Zi'
-				cppCompiler.define 'DEBUG'
-				linker.args '/DEBUG'
-			}
-		}
-	}
 	components {
 		jmtp(NativeLibrarySpec) {
 			sources {
-				cpp {
+				c {
 					source {
 						srcDir 'src/main/cpp/src'
-						include '*.cpp'
+						include '*.c'
 					}
 					exportedHeaders {
-						srcDirs 'src/main/cpp/include', '/usr/include', '/usr/local/include', '/usr/lib/jvm/default-java/include', '/usr/lib/jvm/default-java/include/linux'
+						srcDirs 'src/main/cpp/headers', '/usr/include', '/usr/local/include', '/usr/lib/jvm/default-java/include', '/usr/lib/jvm/default-java/include/linux'
 					}
 
 					lib library: 'mtp', linkage: 'api'
 					lib library: 'mtplib'
 				}
 
-			}
-			buildTypes {
-				debug
-				release
-			}
-		}
-		jmtpx(NativeExecutableSpec) {
-			sources {
-				cpp {
-					source {
-						srcDir 'src/main/cpp/src'
-						include '*.cpp'
-					}
-					exportedHeaders {
-						srcDirs 'src/main/cpp/include', '/usr/include', '/usr/local/include', '/usr/lib/jvm/default-java/include', '/usr/lib/jvm/default-java/include/linux'
-					}
-
-					lib library: 'mtp', linkage: 'api'
-					lib library: 'mtplib'
-				}
 			}
 			buildTypes {
 				debug
@@ -132,7 +96,7 @@ tasks.withType(JavaExec) {
 }
 
 compileJava {
-	options.compilerArgs += ['-h', file('src/main/cpp/include/')]
+	options.compilerArgs += ['-h', file('src/main/cpp/headers/')]
 }
 
 jacocoTestReport {
@@ -155,5 +119,6 @@ test {
 	if (project.hasProperty('excludeTests')) {
 		exclude project.property('excludeTests')
 	}
+	systemProperty 'java.library.path', '.:/usr/lib/x86_64-linux-gnu/:build/libs/jmtp/shared/debug/'
 	dependsOn 'jmtpDebugSharedLibrary'
 }
