--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ model {
             eachPlatform {
                 cCompiler.withArguments { args ->
                     args << "-std=c99"
+                    args << "-g"
                 }
             }
         }
