--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,7 @@ model {
 
 tasks.withType(JavaExec) {
     applicationDefaultJvmArgs = ['-Djava.library.path=.:/usr/lib/x86_64-linux-gnu/:build/libs/jmtp/shared/debug/']
+    dependsOn 'jmtpDebugSharedLibrary'
 }
 
 compileJava {
@@ -135,13 +136,11 @@ javafx {
 
 application {
     mainClassName = 'org.meltzg.jmlm.JmlmApplication'
-    applicationDefaultJvmArgs = ['--add-opens', 'javafx.graphics/javafx.scene=ALL-UNNAMED']
+    applicationDefaultJvmArgs += ['--add-opens', 'javafx.graphics/javafx.scene=ALL-UNNAMED']
 }
 
 test {
     if (project.hasProperty('excludeTests')) {
         exclude project.property('excludeTests')
     }
-    systemProperty 'java.library.path', '.:/usr/lib/x86_64-linux-gnu/:build/libs/jmtp/shared/debug/'
-    dependsOn 'jmtpDebugSharedLibrary'
 }
