--- a/build.gradle
+++ b/build.gradle
@@ -143,4 +143,6 @@ test {
     if (project.hasProperty('excludeTests')) {
         exclude project.property('excludeTests')
     }
+    systemProperty 'java.library.path', '.:/usr/lib/x86_64-linux-gnu/:build/libs/jmtp/shared/debug/'
+    dependsOn 'jmtpDebugSharedLibrary'
 }
