--- a/.gitignore
+++ b/.gitignore
@@ -411,6 +411,6 @@ __pycache__/
 build
 out
 !gradle/wrapper/gradle-wrapper.jar
-org_meltzg_jmlm_device_MTPAudioContentDevice.h
+org_meltzg_jmlm_*.h
 src/test/resources/device/*
 !src/test/resources/device/.gitkeep
